<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:minWidth="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_normal2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        style="@style/DarkShadow"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/mine"
        android:gravity="center"
        android:textColor="#ff00ff00"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff00ff00" />

    <TextView
        android:id="@+id/message"
        style="@style/DarkShadow"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/lost"
        android:textColor="#f000"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            style="@style/DarkShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/ok" />

        <Button
            android:id="@+id/more"
            style="@style/DarkShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_red_selector"
            android:gravity="center"
            android:text="@string/moregame" />
    </LinearLayout>

</LinearLayout>